feat: dynamic popular tickers from reddit
